# lora_moe

./: .gitignore  CLAUDE_CONTEXT.md  EXIT CODE:   MANIFEST.in  MIGRATION.md  README.md  pyproject.toml  requirements.txt  results_summary.md  setup.py
.github/workflows/: ci.yaml
docker/: .dockerignore  Dockerfile  Dockerfile.minimal
examples/: chat_finetuning.py  instruction_tuning.py  local_training.py  qlora_example.py
experiments/lora_moe/: README.md  analyze_results.py  analyze_stageBC.py  benchmark_inference.py  benchmark_stageBC.py  data.py  data_mixture.py  injection.py  metrics.py  run_all.sh  run_experiment.py  run_stageB.sh  run_stageB_4gpu.sh  run_stageC.sh  timing_callback.py  trainer.py
experiments/lora_moe/configs/: abmil_moe.yaml  accelerate_fsdp_stageB.yaml  accelerate_fsdp_stageC.yaml  qlora.yaml  soft_lora_moe.yaml  soft_moe.yaml  softmax_lora_moe.yaml  softmax_moe.yaml  sparse_moe.yaml  stageB_soft_lora_moe.yaml  stageB_sparse_moe.yaml  stageC_soft_lora_moe.yaml  stageC_sparse_moe.yaml  standard_lora.yaml
experiments/lora_moe/modules/: __init__.py  ffn_moe_layers.py  lora_layers.py
figures/stageA/: summary.csv
src/llama_finetune/: __init__.py  cli.py
src/llama_finetune/configs/: config.py  hyperparameters.py
src/llama_finetune/tasks/: data_preparation.py  model_packaging.py  training.py
src/llama_finetune/workflows/: finetune_pipeline.py
tests/: __init__.py  test_config.py
