[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llama-finetune"
version = "0.1.0"
description = "LLM finetuning framework with transformers + peft + Ray orchestration"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["llm", "finetuning", "lora", "transformers", "ray", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core ML libraries
    "torch>=2.1.0",
    "transformers>=4.38.1",
    "peft>=0.9.0",
    "accelerate>=0.27.2",
    "datasets>=2.17.0",
    "bitsandbytes>=0.42.0",

    # Distributed training
    "deepspeed>=0.13.0",
    "ray[default]>=2.9.0",

    # Storage & data
    "fsspec>=2023.1.0",
    "s3fs>=2023.1.0",  # For S3 support

    # Utilities
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

azure = [
    "adlfs>=2023.1.0",  # Azure Blob Storage
]

gcs = [
    "gcsfs>=2023.1.0",  # Google Cloud Storage
]

logging = [
    "wandb>=0.15.0",
    "tensorboard>=2.13.0",
    "mlflow>=2.7.0",
]

all = [
    "llama-finetune[dev,azure,gcs,logging]",
]

[project.urls]
Homepage = "https://github.com/yourusername/llama-finetune"
Documentation = "https://github.com/yourusername/llama-finetune#readme"
Repository = "https://github.com/yourusername/llama-finetune"
Issues = "https://github.com/yourusername/llama-finetune/issues"

[project.scripts]
llama-finetune = "llama_finetune.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["llama_finetune*"]

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=llama_finetune --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
